# Blockchain_Wallet

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.2d207ea  CMakeLists.txt.user.5a1d50f  CMakeLists.txt.user.70babdf  CMakeLists.txt.user.978e981  CMakeLists.txt.user.d98af8a  CMakeLists.txt.user.daa13c1  CMakeLists.txt.user.ed0aa26  CMakeLists.txt.user.fb8dff8  README.md  about_of_authors.cpp  about_of_authors.h  main.cpp
client/blockchain/: blockchain.cpp  blockchain.h
client/classes/: blockchain.cpp  blockchain.h  program_exception.cpp  program_exception.h  users.cpp  users.h
client/gui/: about_of_authors.cpp  about_of_authors.h  about_of_authors.ui  about_program_form.cpp  about_program_form.h  about_program_form.ui  auth_form.cpp  auth_form.h  auth_form.ui  change_passphrase_form.cpp  change_passphrase_form.h  change_passphrase_form.ui  encrypt_wallet_form.cpp  encrypt_wallet_form.h  encrypt_wallet_form.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  send_by_request_form.cpp  send_by_request_form.h  send_by_request_form.ui  settings_form.cpp  settings_form.h  settings_form.ui  transactionscardview.cpp  transactionscardview.h  transactionscardview.ui
client/scripts/: csv_func.cpp  csv_func.h  json_func.cpp  json_func.h  new_wallet.cpp  new_wallet.h  new_wallet_generation_procedure.cpp  new_wallet_generation_procedure.h  program_algorithms.cpp  program_algorithms.h  program_exceptions.cpp  program_exceptions.h
client/tests/: program_exception.cpp  program_exception.h
doc/: block2_10.json  chain.json  requestsList.csv  translation.csv  users.json  Пароли_ссылки.txt
doc/users/: users.json
includes/effolkronium/: README.txt
